bpk-lib/crates/macbat/macros/tests/trybuild_negative/operation_generic_fn.stderr
error: generic operation
  --> tests/trybuild_negative/operation_generic_fn.rs:10:5
   |
10 | fn f<T>(input: &[u8], cx: &mut u8) -> u8 {
   |     ^
